--- a/packages/Sublogix.1.4.0.0/Entity Templates/SublogixEntityObjects.tt
+++ b/packages/Sublogix.1.4.0.0/Entity Templates/SublogixEntityObjects.tt
@@ -29,6 +29,7 @@ namespace <#=Namespace#>
 {
 <# foreach(var table in tables)
 { #>
+	<# if (table.Fields.Count == 0) continue; #>
 	#region <#=table.PrettyName#>
 	
 	/// <summary>
@@ -55,7 +56,7 @@ namespace <#=Namespace#>
 		{
 			if (Repository == null)
 				throw new Exception("Repository has not been initialized. Use Repository.Create<<#=table.PrettyName#>>() to create the entity or save manually using the Repository Add or Update methods");
-
+				
 			if (<#=table.PrimaryKeyProperty.PrettyName#> != null && !string.IsNullOrEmpty(<#=table.PrimaryKeyProperty.PrettyName#>.ToString()) && Repository.GetById<<#=table.PrettyName#>>(<#=table.PrimaryKeyProperty.PrettyName#>.ToString()) != null)
 				Repository.Update<<#=table.PrettyName#>>(this);
 			else
@@ -66,6 +67,9 @@ namespace <#=Namespace#>
 		{
 			if (Repository == null)
 				throw new Exception("Repository has not been initialized. The entity must first be retrieved using the repository to be deleted.");
+				
+			if (<#=table.PrimaryKeyProperty.PrettyName#> == null || string.IsNullOrEmpty(<#=table.PrimaryKeyProperty.PrettyName#>.ToString()))
+				throw new Exception("The primary key for the entity is missing. The entity cannot be deleted.");
 
 			Repository.Delete<<#=table.PrettyName#>>(this);
 		}
